# sigmarsGarden

./: LICENSE  Pipfile  README.md
sigmar_solver/: Cargo.toml
sigmar_solver/src/: board.rs  coord.rs  element.rs  lib.rs  overlay_board.rs  solving.rs
sigmarsGarden/: acting.py  catalogue.py  config.py  match.py  parse.py  screenshot.py
tools/: configure.py  createTemplates.py  match.py  simulator.py  solve.py
